--- a/src/ggrc/assets/stylesheets/modules/_modal.scss
+++ b/src/ggrc/assets/stylesheets/modules/_modal.scss
@@ -337,6 +337,11 @@
         margin-bottom: 0;
       }
     }
+    .checkbox-inline {
+      input[type="checkbox"] {
+        margin: -1px 0 0 0;
+      }
+    }
     input[type="checkbox"] {
       margin-bottom: 9px;
     }
@@ -664,6 +669,20 @@
     .confirm-buttons {
       text-align: right;
     }
+    label {
+      font-weight: normal;
+      color: #111;
+      font-size: 16px;
+      margin-bottom: 7px;
+      i {
+        @include opacity(0.2);
+        cursor: pointer;
+        margin: 0 4px 0 0;
+        &:hover {
+          @include opacity(0.7);
+        }
+      }
+    }
   }
   .actions {
     margin: 0;
@@ -915,7 +934,11 @@
     }
   }
 }
-
+.confirm-buttons {
+  input.inline {
+    margin-right: 5px;
+  }
+}
 .frequency-wrap {
   label.smaller {
     margin-top:16px;
